# Graw-Guess

./: LICENSE  README.md  config.sample.json
draw&guess client/: CMakeLists.txt  bmp.cpp  bmp.h  color.cpp  color.h  curve.cpp  curve.h  icon.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  painter.cpp  painter.h
draw&guess client/pointSoftenExternal/include/: pointSoftenExternal.h  pointSoftenExternal_data.h  pointSoftenExternal_initialize.h  pointSoftenExternal_terminate.h  pointSoftenExternal_types.h  rtwtypes.h
draw&guess server/: index.js  package-lock.json  package.json
